[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JustPaste.py"
version = "2.0"
authors = [
  { name="Devran Dogan", email="fidevran962@gmail.com" },
]
description = "A simple Python library for JustPaste.it API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/devdagoat/JustPaste.py"

[tool.setuptools.packages.find]
where = ["src"]